Reformatting Password Change

--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,11 @@
+Aggiungere profilo all'utente come da tutorial di Corey Schafer con upload immagine del profilo
 Aggiungere commenti ai post solo da registrati e solo l'utente che li ha scritti può cancellarli o modificarli
 Far vedere commenti nei dettagli
 Gestire appname per gli URL
+vedere se si può fare in modo che la pagina sia con Footer sempre in fondo e che non dia altri problemi
+Rendere email univoca nel sistema altrimenti credo che vada in errore la password reset.
+Come mettere internazionalizzaione nei templates
+
 
 FATTO
 
