--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,6 @@
 Aggiungere profilo all'utente come da tutorial di Corey Schafer con upload immagine del profilo
 Aggiungere commenti ai post solo da registrati e solo l'utente che li ha scritti può cancellarli o modificarli
-
+Far vedere solo post e commenti con il flag published a true
 
 Gestire appname per gli URL
 vedere se si può fare in modo che la pagina sia con Footer sempre in fondo e che non dia altri problemi
