--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,4 @@
+Mettere IP address nel log di debug
 Aggiungere profilo all'utente come da tutorial di Corey Schafer con upload immagine del profilo
 Aggiungere commenti ai post solo da registrati e solo l'utente che li ha scritti può cancellarli o modificarli
 Far vedere solo post e commenti con il flag published a true
